--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
   </div>
 
   <!-- Öğrenen Chat: Yüzen Buton ve Panel -->
-  <button id="learn-chat-toggle" class="fixed bottom-24 right-5 z-50 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-4 py-3 rounded-full shadow-lg">
+  <button id="learn-chat-toggle" class="fixed top-5 left-5 z-[60] bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-4 py-3 rounded-full shadow-lg">
     Öğrenen Chat
   </button>
-  <div id="learn-chat-panel" class="fixed bottom-24 right-5 z-50 hidden w-[360px] max-w-[95vw] bg-gray-900 border border-gray-700 rounded-2xl shadow-2xl overflow-hidden">
+  <div id="learn-chat-panel" class="fixed top-20 left-5 z-[60] hidden w-[360px] max-w-[95vw] bg-gray-900 border border-gray-700 rounded-2xl shadow-2xl overflow-hidden">
     <div class="flex items-center justify-between px-4 py-3 border-b border-gray-700">
       <div class="text-white font-semibold">KΔIRA Öğrenen Chat</div>
       <div class="flex items-center gap-2">
